@@ -3343,11 +3343,13 @@ int update_job(job_desc_msg_t * job_specs, uid_t uid)
 		if (super_user ||
 		    (job_ptr->time_limit > job_specs->time_limit)) {
 			time_t old_time =  job_ptr->time_limit;
+			if (old_time == INFINITE)	/* one year in mins */
+				old_time = (365 * 24 * 60);
 			job_ptr->time_limit = job_specs->time_limit;
-			if (job_ptr->time_limit == INFINITE)	/* one year */
+			if (job_ptr->time_limit == INFINITE) {	/* one year */
 				job_ptr->end_time = now +
 					(365 * 24 * 60 * 60);
-			else {
+			} else {
 				/* Update end_time based upon change
 				 * to preserve suspend time info */
 				job_ptr->end_time = job_ptr->end_time +
